--- a/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
+++ b/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
@@ -177,8 +177,12 @@
     <ClInclude Include="wglew.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="fragShader.txt" />
-    <Text Include="vertShader.txt" />
+    <Text Include="Shaders\Phong\fragShader.frag" />
+    <Text Include="Shaders\Phong\vertShader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Shaders\PBR\PBR_fragShader.frag" />
+    <Content Include="Shaders\PBR\PBR_vertShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
