--- a/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
+++ b/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
@@ -180,11 +180,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Shaders\Phong\fragShader.frag" />
-    <Text Include="Shaders\Phong\vertShader.vert" />
+    <Text Include="Shaders\vertShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Shaders\PBR\PBR_fragShader.frag" />
-    <Content Include="Shaders\PBR\PBR_vertShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
