--- a/PGG_ShadersIntro/imgui.ini
+++ b/PGG_ShadersIntro/imgui.ini
@@ -4,17 +4,42 @@ Size=400,400
 Collapsed=0
 
 [Window][Lighting Controls]
-Pos=5,14
-Size=436,244
+Pos=25,23
+Size=350,231
 Collapsed=0
 
 [Window][Shader Controls]
 Pos=491,87
-Size=137,105
+Size=156,168
 Collapsed=0
 
 [Window][PBR Controls]
 Pos=66,383
 Size=266,136
+Collapsed=0
+
+[Window][Object Controls]
+Pos=249,333
+Size=354,255
+Collapsed=0
+
+[Window][Cube Settings]
+Pos=21,463
+Size=352,116
+Collapsed=0
+
+[Window][Cube Animation Controls]
+Pos=10,13
+Size=317,128
+Collapsed=0
+
+[Window][Lighting Models]
+Pos=351,20
+Size=289,82
+Collapsed=0
+
+[Window][Statistics]
+Pos=264,411
+Size=339,48
 Collapsed=0
 
