--- a/PGG_ShadersIntro/imgui.ini
+++ b/PGG_ShadersIntro/imgui.ini
@@ -24,12 +24,12 @@ Size=354,255
 Collapsed=0
 
 [Window][Cube Settings]
-Pos=53,987
-Size=415,297
+Pos=17,834
+Size=415,408
 Collapsed=0
 
 [Window][Cube Animation Controls]
-Pos=12,15
+Pos=9,15
 Size=317,128
 Collapsed=0
 
@@ -39,7 +39,22 @@ Size=301,109
 Collapsed=0
 
 [Window][Statistics]
-Pos=912,1205
+Pos=931,1135
 Size=339,48
+Collapsed=0
+
+[Window][Cube Presets]
+Pos=935,163
+Size=304,104
+Collapsed=0
+
+[Window][Cube Presets (Across All 3 Shaders)]
+Pos=930,165
+Size=299,114
+Collapsed=0
+
+[Window][Exclusive Disney Cube Presets]
+Pos=932,294
+Size=293,126
 Collapsed=0
 
