--- a/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
+++ b/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
@@ -237,6 +237,7 @@
     <ClCompile Include="glew.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="ShaderAnalyser.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -255,6 +256,7 @@
     <ClInclude Include="Cube.h" />
     <ClInclude Include="glew.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="ShaderAnalyser.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="wglew.h" />
   </ItemGroup>
