data stuff (10,000 cubes)

--- a/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
+++ b/PGG_ShadersIntro/PGG_ShadersIntro.vcxproj
@@ -261,6 +261,7 @@
     <ClInclude Include="wglew.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Shaders\Disney_PBR\DPBR_vertShader.vert" />
     <Text Include="Shaders\PBR\PBR_vertShader.vert" />
     <Text Include="Shaders\Phong\fragShader.frag" />
   </ItemGroup>
